# ssf-ai-toolkit

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  r-package-check.yml
Rplug/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md
Rplug/R/: effort.R  gear.R  hexagrid.R  utils.R  vessel.R  zzz.R
Rplug/man/: check_python_env.Rd  effort_fit.Rd  effort_predict.Rd  effort_predict_statistical.Rd  gear_fit.Rd  gear_predict.Rd  hexagrid_aggregate.Rd  install_ssfaitk.Rd  ssfaitk_available.Rd  ssfaitk_version.Rd  update_ssfaitk.Rd  use_ssfaitk_python.Rd  vessel_fit.Rd  vessel_predict.Rd
Rplug/tests/: testthat.R
Rplug/vignettes/: getting-started.Rmd
data/: kenya-pds-tracks_14119254.parquet  zanzibar-pds-tracks_14232947.parquet
data/coastline/: README.txt  coastline_land_wio.dbf  coastline_land_wio.shp  coastline_land_wio.shx  coastline_lines_wio.dbf  coastline_lines_wio.shp  coastline_lines_wio.shx
examples/data/: all_zanzibar_gear_labels_simplified.csv  all_zanzibar_gear_labels_simplified_only.csv
examples/notebooks/: GCS Data Download.ipynb  HexaGrid map data generator.ipynb  README.md  Statistical_Fishing_Effort_Classification_v2.ipynb  Untitled.ipynb  Visuals.ipynb  fishing_effort_prediction.ipynb  gear_labels_simplified_only.csv  shore_filtering_example.ipynb  statistical_effort_prediction-v2.ipynb  statistical_effort_prediction.ipynb  supervised_effort_prediction.ipynb  test_visualizations.ipynb  (+1 more)
tests/: test_cli_help.py  test_imports.py
(+86 files in other folders)
